--- a/src/app/@theme/components/header/header.component.scss
+++ b/src/app/@theme/components/header/header.component.scss
@@ -49,9 +49,11 @@
       font-weight: nb-theme(font-weight-bolder);
       border-left: 1px solid nb-theme(separator);
       white-space: nowrap;
-
       span {
         font-weight: nb-theme(font-weight-normal);
+      }
+      span:hover{
+        cursor: pointer;
       }
     }
   }
