--- a/src/app/pages/components/plan-contenidos/plan-contenidos.component.html
+++ b/src/app/pages/components/plan-contenidos/plan-contenidos.component.html
@@ -26,14 +26,13 @@
           </div>
         </div>
       </div>
-    <nb-card-body>
-        <div class="col-md-7">
+    <nb-card-body class="row">
+        <div class="col-md-6">
            <pc-unidades></pc-unidades>
         </div>
-        <div class="col-md-5">
-          
+        <div class="col-md-6">
+          <pc-calendario></pc-calendario>
         </div>
-       
     </nb-card-body>
   </nb-card>
 </div>
