cambio en el orden de elementos

--- a/src/app/modules/pages/components/plan-contenidos/components/calendario/calendario.component.html
+++ b/src/app/modules/pages/components/plan-contenidos/components/calendario/calendario.component.html
@@ -1,5 +1,4 @@
-<nb-card class="row">
-  <nb-card-body>
-    <div id='calendar'></div>
-  </nb-card-body>
-</nb-card>
+<div class="calendarContainer">
+    <div class='calendar'>
+      </div>
+</div>
