--- a/src/app/modules/pages/components/plan-contenidos/components/calendario/calendario.component.css
+++ b/src/app/modules/pages/components/plan-contenidos/components/calendario/calendario.component.css
@@ -1,4 +1,8 @@
+.calendarContainer{
+    display: flex;
+    justify-content: center;
+}
 #calendar{
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 400px;
+    max-height: 400px;
 }
