--- a/src/app/modules/pages/components/plan-contenidos/plan-contenidos.component.html
+++ b/src/app/modules/pages/components/plan-contenidos/plan-contenidos.component.html
@@ -1,39 +1,36 @@
 <div class="row">
-  <nb-card class="col-lg-12">
-      <div class="row select-container">
-        <div class="col-lg-6">
-          <div class="form-group">
-            <select [(ngModel)]="currentCurso" (ngModelChange)="changeCurso($event)" class="form-control">
-                <option *ngIf="cursos.length > 0"  [ngValue]="undefined" selected disabled>[Seleccione Curso]</option>
-                <option *ngIf="cursos.length == 0"  [ngValue]="undefined" selected disabled>No Hay Cursos Asociados</option>
-                <option *ngFor="let curso of cursos" [ngValue]="curso.Id">
-                  {{curso.Grado}} {{curso.Letra}}
-                </option>
-            </select>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="form-group">
-              <select [(ngModel)]="currentAsignatura" (ngModelChange)="changeAsignatura($event)"
-               *ngIf="currentCurso != null" class="form-control">
-                  <option *ngIf="asignaturas.length > 0"  [ngValue]="undefined" 
-                    selected disabled>[Seleccione Asignatura]</option>
-                  <option *ngIf="asignaturas.length == 0"  [ngValue]="undefined"
-                   selected disabled>No Hay Asignaturas Asociadas</option>
-                  <option *ngFor="let asignatura of asignaturas" [ngValue]="asignatura.Id">
-                    {{asignatura.Nombre}}
-                  </option>
-              </select>
-          </div>
+  <div class="col-lg-12">
+    <div class="row select-container">
+      <div class="col-lg-6">
+        <div class="form-group">
+          <select [(ngModel)]="currentCurso" (ngModelChange)="changeCurso($event)" class="form-control">
+              <option [ngValue]="undefined" selected disabled>{{noCursosMsg}}</option>
+            <option *ngFor="let curso of cursos" [ngValue]="curso.Id">
+              {{curso.Grado}} {{curso.Letra}}
+            </option>
+          </select>
         </div>
       </div>
-    <nb-card-body *ngIf="currentAsignatura != null" class="row">
-        <div class="col-md-6">
-           <pc-unidades></pc-unidades>
+      <div class="col-lg-6">
+        <div class="form-group">
+          <select [(ngModel)]="currentAsignatura" (ngModelChange)="changeAsignatura($event)" *ngIf="currentCurso != null" class="form-control">
+            <option [ngValue]="undefined" selected disabled>{{noAsignaturasMsg}}</option>
+            <option *ngFor="let asignatura of asignaturas" [ngValue]="asignatura.Id">
+              {{asignatura.Nombre}}
+            </option>
+          </select>
         </div>
-        <div class="col-md-6">
+      </div>
+    </div>
+    <div *ngIf="currentAsignatura != null" class="row">
+      <div class="col-md-6">
+        <pc-unidades></pc-unidades>
+      </div>
+      <div class="col-md-6">
+        <nb-card>
           <pc-calendario></pc-calendario>
-        </div>
-    </nb-card-body>
-  </nb-card>
+        </nb-card>
+      </div>
+    </div>
+  </div>
 </div>
