--- a/src/app/modules/pages/components/plan-contenidos/components/unidades/unidades.component.html
+++ b/src/app/modules/pages/components/plan-contenidos/components/unidades/unidades.component.html
@@ -1,20 +1,30 @@
 <nb-card>
-  <nb-card-body>
-    <div class="headerUnidades row">
-      <div class="col-sm-8">
-        <h5 class="unidadesTitle">Unidad 1</h5>
-        <h6 class="unidadesTitle">Aprendizajes Esperados</h6>
-      </div>
-      <div class="col-sm-4">
-          <div class="btn-group">
-              <button type="button" class="btn btn-primary btn-icon">
-                  <i class="nb-arrow-left"></i>
-                </button>
-                <button type="button" class="btn btn-primary btn-icon">
-                  <i class="nb-arrow-right"></i>
-                </button>
+  <div class="unidadesContainer">
+      <div class="headerUnidades row">
+          <div class="col-sm-8">
+            <h5 class="unidadesTitle">Unidad 1</h5>
+            <h6 class="unidadesTitle">Aprendizajes Esperados</h6>
           </div>
-      </div>
-    </div>
-  </nb-card-body>
+          <div class="col-sm-4">
+              <div class="btn-group">
+                  <button type="button" class="btn btn-primary btn-icon">
+                      <i class="nb-arrow-left"></i>
+                    </button>
+                    <button type="button" class="btn btn-primary btn-icon">
+                      <i class="nb-arrow-right"></i>
+                    </button>
+              </div>
+          </div>
+        </div>
+        <div class="contenidos">
+            <div id='external-events'>
+              
+                    <div class='fc-event grabbable'>My Event 1</div>
+                    <div class='fc-event grabbable'>My Event 3</div>
+                    <div class='fc-event grabbable'>My Event 4</div>
+                    <div class='fc-event grabbable'>My Event 5</div>
+              </div>
+        </div>
+  </div>
+    
 </nb-card>
