--- a/src/app/modules/pages/components/plan-contenidos/components/unidades/unidades.component.html
+++ b/src/app/modules/pages/components/plan-contenidos/components/unidades/unidades.component.html
@@ -1,30 +1,79 @@
-<nb-card>
+<nb-card class="unidadesCard">
   <div class="unidadesContainer">
-      <div class="headerUnidades row">
-          <div class="col-sm-8">
-            <h5 class="unidadesTitle">Unidad 1</h5>
-            <h6 class="unidadesTitle">Aprendizajes Esperados</h6>
+    <div class="headerUnidades row">
+      <div class="col-sm-8 unidadesTitle">
+        <h5>Unidad {{currentUnidad.number}} - {{currentUnidad.title}}</h5>
+      </div>
+      <div class="col-sm-4">
+        <div class="row">
+          <div class="col-sm-5">
+            <button *ngIf="currentIndex != 0" type="button" (click)="contenidosBack()" class="btn btn-primary btn-icon">
+              <i class="nb-arrow-left"></i>
+            </button>
           </div>
-          <div class="col-sm-4">
-              <div class="btn-group">
-                  <button type="button" class="btn btn-primary btn-icon">
-                      <i class="nb-arrow-left"></i>
-                    </button>
-                    <button type="button" class="btn btn-primary btn-icon">
-                      <i class="nb-arrow-right"></i>
-                    </button>
-              </div>
+          <div class="col-sm-5">
+            <button *ngIf="currentIndex != unidades.length -1" type="button" (click)="contenidosNext()" class="btn btn-primary btn-icon">
+              <i class="nb-arrow-right"></i>
+            </button>
           </div>
         </div>
-        <div class="contenidos">
-            <div id='external-events'>
-              
-                    <div class='fc-event grabbable'>My Event 1</div>
-                    <div class='fc-event grabbable'>My Event 3</div>
-                    <div class='fc-event grabbable'>My Event 4</div>
-                    <div class='fc-event grabbable'>My Event 5</div>
-              </div>
-        </div>
+      </div>
+    </div>
+    <div class="contenidos">
+      <div *ngIf="currentIndex == 0" id='external-events'>
+        <h4>OA 07 - Distinguir fuentes naturales y artificiales de luz, como el Sol, las ampolletas y el fuego, entre otras</h4>
+        <ol>
+          <li>
+            <div class='fc-event grabbable'>Contenido 1</div>
+          </li>
+          <li>
+            <div class='fc-event grabbable'>Contenido 2</div>
+          </li>
+          <li>
+            <div class='fc-event grabbable'>Contenido 3</div>
+          </li>
+          <li>
+            <div class='fc-event grabbable'>Contenido 4</div>
+          </li>
+        </ol>
+      </div>
+      <div *ngIf="currentIndex == 1" id='external-events'>
+          <h4>OA 08 - Describir las características de algunos de los componentes del Sistema Solar (Sol, planetas, lunas, cometas y asteroides) en relación con su tamaño,
+             localización, apariencia y distancia relativa a la Tierra, entre otros..</h4>
+          <ol>
+              <li>
+                <div class='fc-event grabbable'>Contenido 1</div>
+              </li>
+              <li>
+                <div class='fc-event grabbable'>Contenido 2</div>
+              </li>
+              <li>
+                <div class='fc-event grabbable'>Contenido 3</div>
+              </li>
+              <li>
+                <div class='fc-event grabbable'>Contenido 4</div>
+              </li>
+            </ol>
+      </div>
+      <div *ngIf="currentIndex == 2" id='external-events'>
+          <h4>OA 09 - Observar y describir, por medio de la investigación experimental,
+             las necesidades de las plantas y su relación con la raíz, el tallo y las hojas.</h4>
+          <ol>
+              <li>
+                <div class='fc-event grabbable'>Contenido 1</div>
+              </li>
+              <li>
+                <div class='fc-event grabbable'>Contenido 2</div>
+              </li>
+              <li>
+                <div class='fc-event grabbable'>Contenido 3</div>
+              </li>
+              <li>
+                <div class='fc-event grabbable'>Contenido 4</div>
+              </li>
+            </ol>
+      </div>
+    </div>
   </div>
-    
+
 </nb-card>
