--- a/src/app/modules/pages/components/plan-contenidos/components/unidades/unidades.component.html
+++ b/src/app/modules/pages/components/plan-contenidos/components/unidades/unidades.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="contenidos">
-      <div *ngIf="currentIndex == 0" id='external-events'>
+      <div *ngIf="currentIndex == 0" class='external-events'>
         <h4>OA 07 - Distinguir fuentes naturales y artificiales de luz, como el Sol, las ampolletas y el fuego, entre otras</h4>
         <ol>
           <li>
@@ -37,42 +37,7 @@
           </li>
         </ol>
       </div>
-      <div *ngIf="currentIndex == 1" id='external-events'>
-          <h4>OA 08 - Describir las características de algunos de los componentes del Sistema Solar (Sol, planetas, lunas, cometas y asteroides) en relación con su tamaño,
-             localización, apariencia y distancia relativa a la Tierra, entre otros..</h4>
-          <ol>
-              <li>
-                <div class='fc-event grabbable'>Contenido 1</div>
-              </li>
-              <li>
-                <div class='fc-event grabbable'>Contenido 2</div>
-              </li>
-              <li>
-                <div class='fc-event grabbable'>Contenido 3</div>
-              </li>
-              <li>
-                <div class='fc-event grabbable'>Contenido 4</div>
-              </li>
-            </ol>
-      </div>
-      <div *ngIf="currentIndex == 2" id='external-events'>
-          <h4>OA 09 - Observar y describir, por medio de la investigación experimental,
-             las necesidades de las plantas y su relación con la raíz, el tallo y las hojas.</h4>
-          <ol>
-              <li>
-                <div class='fc-event grabbable'>Contenido 1</div>
-              </li>
-              <li>
-                <div class='fc-event grabbable'>Contenido 2</div>
-              </li>
-              <li>
-                <div class='fc-event grabbable'>Contenido 3</div>
-              </li>
-              <li>
-                <div class='fc-event grabbable'>Contenido 4</div>
-              </li>
-            </ol>
-      </div>
+     
     </div>
   </div>
 
