--- a/src/app/modules/pages/components/plan-contenidos/components/unidades/unidades.component.html
+++ b/src/app/modules/pages/components/plan-contenidos/components/unidades/unidades.component.html
@@ -20,8 +20,10 @@
       </div>
     </div>
     <div class="contenidos">
-      <div *ngIf="currentIndex == 0" class='external-events'>
-        <h4>OA 07 - Distinguir fuentes naturales y artificiales de luz, como el Sol, las ampolletas y el fuego, entre otras</h4>
+      <div class='external-events'>
+        <h4 *ngIf="currentIndex == 0" >OA 07 -Importancia de la luz en el desarrollo de la vida en el planeta y del sonido, que permite la percepción de vibraciones de objetos, ecos, música y el lenguaje oral.</h4>
+        <h4 *ngIf="currentIndex == 1" >OA 08 - Distinguir fuentes naturales y artificiales de luz, como el Sol, las ampolletas y el fuego, entre otras</h4>
+        <h4 *ngIf="currentIndex == 2" >OA 09 - Las plantas: su importancia como fuente de alimentación, para la respiración y como medicinas. Observación de distintas plantas. Funciones de cada una de sus partes.</h4>
         <ol>
           <li>
             <div class='fc-event grabbable'>Contenido 1</div>
@@ -37,7 +39,40 @@
           </li>
         </ol>
       </div>
-     
+     <!-- <div *ngIf="currentIndex == 1" class='external-events'>
+        <h4></h4>
+        <ol>
+          <li>
+            <div class='fc-event grabbable'>Contenido 1</div>
+          </li>
+          <li>
+            <div class='fc-event grabbable'>Contenido 2</div>
+          </li>
+          <li>
+            <div class='fc-event grabbable'>Contenido 3</div>
+          </li>
+          <li>
+            <div class='fc-event grabbable'>Contenido 4</div>
+          </li>
+        </ol>
+      </div>
+      <div *ngIf="currentIndex == 2" class='external-events'>
+        <h4>OA 09 - Distinguir fuentes naturales y artificiales de luz, como el Sol, las ampolletas y el fuego, entre otras</h4>
+        <ol>
+          <li>
+            <div class='fc-event grabbable'>Contenido 1</div>
+          </li>
+          <li>
+            <div class='fc-event grabbable'>Contenido 2</div>
+          </li>
+          <li>
+            <div class='fc-event grabbable'>Contenido 3</div>
+          </li>
+          <li>
+            <div class='fc-event grabbable'>Contenido 4</div>
+          </li>
+        </ol>
+      </div>-->
     </div>
   </div>
 
